--- a/DragonTacticsSheet.css
+++ b/DragonTacticsSheet.css
@@ -275,6 +275,13 @@ div.sheet-numblock:hover {
     cursor: pointer;
 }
 
+label.sheet-numblock input[type=number],
+label.sheet-numblock input[type=text] {
+    width: 100%;
+    text-align: center;
+    border-radius: 0;
+}
+
 /* Label numblock */
 
 label.sheet-numblock-container {
@@ -302,11 +309,6 @@ label.sheet-3col {
     width: 32%;
 }
 
-label.sheet-numblock input[type=number] {
-    width: 100%;
-    text-align: center;
-    border-radius: 0;
-}
 
 /* Button Numblock */
 
@@ -604,6 +606,7 @@ div.sheet-powerhide div.sheet-powerheader {
 div.sheet-powershow div.sheet-powerheader,
 div.sheet-powerconfig div.sheet-powerheader {
     border-radius: 5px 5px 0 0;
+    border-style: solid solid none;
 }
 
 
@@ -631,32 +634,57 @@ select.sheet-powerdisplay {
     border-style: none solid solid;
     border-radius: 0 0 5px 5px;
     overflow: hidden;
-    padding: 5px;
 }
 
 /* Show */
 
 div.sheet-powershow .sheet-powerbody {
     background-color: white;
+    padding-top: 5px;
+}
+div.sheet-powershow .sheet-powerbody .sheet-powershow-row {
+    padding: 3px 5px;
 }
 
+div.sheet-powershow .sheet-powerbody .sheet-powershow-row:nth-child(2n) {
+    background-color: lightgray;
+}
+
+label.sheet-ready { 
+    float: right;
+    width: 90px;
+    margin: 0;
+    padding: 0;
+}
+
+input.sheet-usage[value="atwill"]~div.sheet-powershow label.sheet-ready {
+    display: none;
+}
+
+
+div.sheet-powershow .sheet-powerbody .sheet-powershow-row button[type="roll"] {
+    font-style: italic;
+}
 
 /* Config */
 
 div.sheet-powerconfig .sheet-powerbody {
     background-color: #faf7ea;
+    padding: 5px;
+}
+
+div.sheet-powerconfig .sheet-powerbody select {
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 
 .sheet-usage {
     width: 90px;
 }
 
-
-
-/*  */
-
-.sheet-action {
-    width: 150px;
+label.sheet-numblock.sheet-diceinput,
+label.sheet-numblock.sheet-miscbonus {
+    width: calc(50% - 2px);
 }
 
 select.sheet-attselect {
@@ -672,20 +700,9 @@ select.sheet-accesoryselect {
     width: 120px;
 }
 
-input.sheet-rangetargets[type="text"] {
-    width: 100%;
-}
-
-.sheet-damageroll,
-.sheet-attackroll {
-    font-size: 140%;
-}
-
-button[type=roll].sheet-combatroll {
-    height: 28px;
-    margin: 0px;
-    padding: 0px;
-    font-size: 18.2px;
+input.sheet-range[type="text"],
+input.sheet-targets[type="text"] {
+    width: calc(50% - 2px);
 }
 
 
